# Sockets

./: CMakeLists.txt  README.md  test1.sh
DomainNameToIP/: CMakeLists.txt  main.c  main.cpp
Examples/: CMakeLists.txt
Examples/AddressOperations/: CMakeLists.txt  main.cpp
Examples/DgramPacketsBroadcaster/: CMakeLists.txt  main.cpp
Examples/DgramPacketsClient/: CMakeLists.txt  main.cpp
Examples/DgramPacketsServer/: CMakeLists.txt  main.cpp
Examples/DomainNameToIP/: CMakeLists.txt  main.cpp
Examples/Proxy/: CMakeLists.txt  main.cpp
Examples/ProxyServer/: CMakeLists.txt  main.cpp
Examples/SimpleTCPEcho/: CMakeLists.txt  main.cpp
Examples/TCPEchoServer/: CMakeLists.txt  main.cpp
Examples/TCPEchoServer-multithread/: CMakeLists.txt  main.cpp
Examples/WebsiteSpoofServer/: CMakeLists.txt  main.cpp
Network/: CMakeLists.txt
Network/include/Network/: Address.hpp  EndPoint.hpp  Network.hpp  Socket.hpp  types.hpp
Network/src/: Address.cpp  Socket.cpp  errors.cpp  errors.hpp  sockImpl.hpp  util.cpp  util.hpp
Network/src/unix/: sockImpl.cpp  sockImpl.hpp
Network/src/win32/: sockImpl.cpp  sockImpl.hpp
OLD/DomainNameToIP/: main.c
OLD/SimpleTCPEcho/: CMakeLists.txt
SimpleTCPEcho/: main.c
test/: CMakeLists.txt  main.cpp
test2/: CMakeLists.txt  main.cpp
